# committed

./: .clog.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ]  action.yml  appveyor.yml  azure-pipelines.yml  config.schema.json  pyproject.toml  release.toml  setup.py
.github/: dependabot.yml  renovate.json5  settings.yml
.github/workflows/: ci.yml  maturin.yml  post-release.yml  rust-next.yml  test-action.yml
action/: entrypoint.sh  problem-matcher.json
ci/: tarball.ps1  tarball.sh
crates/committed/: Cargo.toml  pyproject.toml
crates/committed/src/: checks.rs  config.rs  conventional.rs  git.rs  lib.rs  main.rs  no_style.rs  report.rs
crates/committed/tests/: cmd.rs
docker/: Dockerfile  entrypoint.sh
docs/: install.md  reference.md
src/: checks.rs  color.rs  config.rs  conventional.rs  git.rs  lib.rs  main.rs  no_style.rs  report.rs  style.rs
