[workspace]
members = [
    "crates/*",
]
default-members = ["crates/committed"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/committed"
edition = "2021"
rust-version = "1.70.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]
