[package]
name = "committed"
version = "1.1.8"
edition = "2024"
description = "Nitpicking commit history since beabf39"
readme = "README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development"]
repository = "https://github.com/crate-ci/committed"
license = "MIT OR Apache-2.0"
rust-version = "1.89" # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
tag-prefix = ""
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/committed/compare/{{tag_name}}...HEAD", exactly = 1 },
  { file = "action/entrypoint.sh", search = "VERSION=.*", replace = "VERSION={{version}}", min = 1 },
  { file = "README.md", search = "rev: .*", replace = "rev: {{tag_name}}", exactly = 1 },
  { file = "setup.py", search = "COMMITTED_VERSION = .*", replace = "COMMITTED_VERSION = '{{version}}'", exactly = 1 },
]

[features]
unstable-schema = ["dep:schemars"]

[dependencies]
regex = "1.10"
git-conventional = "0.12"
unicase = "2.7.0"
anyhow = "1.0"
git2 = { version = "0.20", default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.1"
unicode-segmentation = "1.11.0"
log = "0.4"
env_logger = "0.11.3"
clap-verbosity-flag = "3.0"
colorchoice-clap = "1.0.3"
grep-cli = "0.1"
imperative = "1.0.5"
derive_more = { version = "2.0.0", features = ["from", "display"] }
itertools = "0.14.0"
proc-exit = "2.0"
human-panic = "2.0.3"
anstream = "0.6.13"
anstyle = "1.0.6"
schemars = { version = "1.0.0", features = ["preserve_order"], optional = true }

[dev-dependencies]
snapbox = { version = "0.6.19", features = ["cmd", "path"] }

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"                 # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# debug = "line-tables-only"  # requires Cargo 1.71
