[package]
name = "committed"
version = "1.0.13"
description = "Nitpicking commit history since beabf39"
documentation = "https://docs.rs/committed"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
tag-prefix = ""
pre-release-replacements = [
  {file="../../CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="../../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../../CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="../../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="../../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/committed/compare/{{tag_name}}...HEAD", exactly=1},
  {file="../../action/entrypoint.sh", search="VERSION=.*", replace="VERSION={{version}}", min=1},
  {file="../../README.md", search="rev: .*", replace="rev: {{tag_name}}", exactly=1},
  {file="../../setup.py", search="COMMITTED_VERSION = .*", replace="COMMITTED_VERSION = '{{version}}'", exactly=1},
]

[dependencies]
regex = "1.7"
once_cell = "1.17.1"
git-conventional = "0.12"
unicase = "2.6.0"
anyhow = "1.0"
git2 = { version = "0.16", default-features = false }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
unicode-segmentation = "1.10.1"
log = "0.4"
env_logger = "0.10"
clap-verbosity-flag = "2.0"
concolor = { version = "0.1.1" }
concolor-clap = { version = "0.1.0", features = ["api"] }
grep-cli = "0.1"
imperative = "1.0.4"
derive_more = "0.99.17"
itertools = "0.10.5"
proc-exit = "2.0"
human-panic = "1.1.1"
anstream = "0.2.0"
anstyle = "0.3.0"
